KubernetesManifests/resultdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result-db
  template:
    metadata:
      labels:
        app: result-db
    spec:
      containers:
      - name: result-db
        image: abdelkefiismail/result-db:latest
        ports:
        - containerPort: 5432 # Assuming PostgreSQL for example
