KubernetesManifests/resultui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-ui-service
spec:
  selector:
    app: result-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
