KubernetesManifests/vote-app-loadbalancer.yaml.yaml
apiVersion: v1
kind: Service
metadata:
  # labels:
  #   app.kubernetes.io/component=controller
  #   app.kubernetes.io/instance=my-ingress-nginx
  #   app.kubernetes.io/managed-by=Helm
  #   app.kubernetes.io/name=ingress-nginx
  #   app.kubernetes.io/part-of=ingress-nginx
  #   app.kubernetes.io/version=1.9.4
    # helm.sh/chart=ingress-nginx-4.8.4
  name: loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
