KubernetesManifests/votingdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-db-service
spec:
  selector:
    app: voting-db
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
